# redcar

./: .gitignore  .rustfmt.toml  Cargo.toml  ChangeLog.md  Dockerfile  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: redcar.yml  security-audit.yml
client/: Cargo.toml  README.md
client/src/: client.rs  config.rs  lib.rs
cmd/redcar-ctl/: Cargo.toml
cmd/redcar-ctl/src/: main.rs
cmd/redcar-server/: Cargo.toml
cmd/redcar-server/src/: main.rs
cmd/redcard/: Cargo.toml
cmd/redcard/src/: main.rs
daemon/: Cargo.toml
daemon/src/: config.rs  daemon.rs  lib.rs  service.rs
doc/: DESIGN.md  PRFAQ.md
docs/: DESIGN.md  PRFAQ.md  Redcar.md  intro.md  redcar
docs/figure/: overview  overview_redcar.drawio
package/backend/: Cargo.toml
package/backend/src/: lib.rs  lmdb.rs  rocksdb.rs
package/index/: Cargo.toml
package/index/src/: index.rs  lib.rs
package/timewheel/: Cargo.toml
package/timewheel/src/: lib.rs  timer.rs  timewheel.rs
package/trigger/: Cargo.toml
package/trigger/src/: edge.rs  level.rs  lib.rs
package/utils/: Cargo.toml
package/utils/src/: lib.rs
proto/: Cargo.toml  build.rs
proto/idl/service/: event.proto  health.proto  keepalive.proto  kv.proto  observe.proto  watch.proto
proto/idl/txn/: cloudevents.proto  type.proto
proto/src/: io.cloudevents.v1.rs  lib.rs  service.rs  txn.rs
src/: config.rs  daemon.rs  kv.rs  lib.rs  os.rs  service.rs  txn.rs
tests/: integration_test.rs
tests/common/: mod.rs
