[workspace]
members = [
    "cmd/redcar-ctl",
    "cmd/redcar-server",
    "client",
    "daemon",
    "proto",
    "package/index",
    "package/backend",
    "package/trigger",
    "package/utils"
]

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 6
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.test]
opt-level = 0
debug = 1
codegen-units = 12
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
