[package]
name = "redcar"
version = "0.1.0"
edition = "2021"

[lib]
name = "redcar"

[dependencies]
proto = { path = "proto", version = "0.1.0" }
utils = { path = "package/utils", version = "0.1.0" }
backend = { path = "package/backend", version = "0.1.0" }
index = { path="package/index", version = "0.1.0" }
trigger = { path="package/trigger", version = "0.1.0" }
protobuf = "~2"
structopt = "0.3"
libc = "0.2"
nix = "0.23"
tonic = { version = "0.5", features = ["transport"]}
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = {version = "0.1", features = ["net"]}
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.3.2"
futures-util = "0.3.17"

[build-dependencies]
tonic-build = { version = "0.5", features = ["transport"]}

[target.'cfg(unix)'.dependencies]
signal = "0.6"

[target.'cfg(any(linux, windows))'.dependencies]
affinity = "0.1.2"

[workspace]
resolver = "2"
members = [
    "cmd/redcar-ctl",
    "cmd/redcar-server",
    "client",
    "proto",
    "package/index",
    "package/backend",
    "package/trigger",
    "package/timewheel",
    "package/utils"
]
default-members = ["cmd/redcar-server", "cmd/redcar-ctl"]

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 6
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.test]
opt-level = 0
debug = 1
codegen-units = 12
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
