[package]
name = "daemon"
version = "0.1.0"
authors = ["mengshi <meng1985626@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto", version = "0.1.0" }
utils = { path = "../package/utils", version = "0.1.0" }
backend = { path = "../package/backend", version = "0.1.0" }
index = { path="../package/index", version = "0.1.0" }
trigger = { path="../package/trigger", version = "0.1.0" }
protobuf = "~2"
structopt = "0.3"
libc = "0.2"
nix = "0.11"
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
tokio-stream = {version = "0.1", features = ["net"]}
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.3.2"
futures-util = "0.3.17"

[build-dependencies]
tonic-build = "0.5"

[target.'cfg(unix)'.dependencies]
signal = "0.6"

[target.'cfg(any(linux, windows))'.dependencies]
affinity = "0.1.2"
