[package]
name = "proto"
version = "0.1.0"
authors = ["mengshi <meng1985626@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proto"
path = "src/lib.rs"

[dependencies]
tonic = "0.5"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}
protobuf = "~2"

[build-dependencies]
tonic-build = "0.5"
