[package]
name = "redcar-ctl"
version = "0.1.0"
authors = ["mengshi <meng1985626@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client = { path = "../../client", version = "0.1.0" }
clap = "3.0.0-beta.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}

