[package]
name = "index"
version = "0.1.0"
authors = ["mengshi <meng1985626@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend", version = "0.1.0" }
utils = { path = "../utils", version = "0.1.0" }
